# regulation-assistant-demo

./: .gitignore  README.md  pyproject.toml
data/: 32_residential_zones.jsonl
notebooks/: regulation-assistant-demo.ipynb
