[tool.poetry]
name = "regulation-assistant-demo"
version = "0.1.0"
description = ""
authors = ["David Tan <davidtan@thoughtworks.com>"]
readme = "README.md"
packages = [{include = "regulation_assistant_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.316"
openai = "^0.28.1"
chromadb = "^0.4.14"
langchainhub = "^0.1.13"
jq = "^1.6.0"
tiktoken = "^0.5.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
